@@ -15,7 +15,7 @@
       (which is not back compatible with previous use of an unnamed second
       argument.)
 
-      \item \code{Df2formula()}, the utility for the data frame method of
+      \item \code{DF2formula()}, the utility for the data frame method of
       \code{formula()}, now works without parsing and explicit evaluation,
       starting from Suharto Anggono's suggestion in \PR{17555}.
 
@@ -40,6 +40,9 @@
       factors and from this to integers.
 
       \item \code{package.skeleton()} now explicitly lists all exports.
+
+      \item New function \code{.S3method()} to register S3 methods in R
+      scripts.
     }
   }
 
